<resources>
    <string name="app_name">Lastmile</string>
    <string name="share_via">Share via</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">....Read More</string>
    <string name="simple_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="days_ago">days ago</string>
    <string name="delivery_url">http://devcloud.in3access.in/lastmile</string>
    <string name="check_internet">Unable to connect internet. Please check your internet and try again</string>
    <string name="error_passing_data">Error passing data.</string>
    <string name="scroll_key">mScroller</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="txt_user_name">Username</string>
    <string name="txt_password">Password</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_bar_code">Scanner</string>
    <string name="rem_me">Remember me</string>
    <string name="start">Start</string>
    <string name="blukstart">Bulk Start</string>
    <string name="sync">Last Sync</string>
    <string name="summery">Summary</string>
    <string name="profile">Profile</string>
    <string name="backup">Backup</string>
    <string name="logout">Logout</string>
    <string name="switch_user">Switch User</string>
    <string name="start_alert">No Shipment Available for Delivery</string>
    <string name="nointernet">No Internet Connection, Please Connect Internet...</string>
    <string name="noordersum">No Delivery Order Summary</string>
    <string name="under">Under Construction</string>
    <string name="select_retailer">Select Retailer</string>
    <string name="retailer_name"> Enter the Retailer Name</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="showlogout">Are you sure, do you want to logout?</string>
    <string name="showSwitch">Are you sure, do you want to Switch User?</string>
    <string name="showexit">Are you sure, do you want to exit?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="amountcolled">Amount Collected</string>
    <string name="phnumber">Phonenumber</string>
    <string name="pincode">Pincode</string>
    <string name="custdevelivery">Customer Delivery</string>
    <string name="delivery_proof">Delivery Proof</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_proof">Invoice Proof</string>
    <string name="addressprof">Address Proof</string>
    <string name="sign">Signature</string>
    <string name="maxqty">You have Only One qty in this Shipment! Partial Delivery Not Allowed!.</string>
    <string name="reason">Reason</string>
    <string name="image">Image</string>
    <string name="undelivered_proof">Undelivered Proof</string>
    <string name="remark">Remarks</string>
    <string name="delivery_summary">Delivery  Summary</string>
    <string name="txt_pending">Pending</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="success">Success</string>
    <string name="dash_order">Total Orders</string>
    <string name="complete">Complete</string>
    <string name="pending">PENDING</string>
    <string name="sucess">SUCCESS</string>
    <string name="faild">FAILED</string>
    <string name="orderno">ORDER NO</string>
    <string name="shipmentno">SHIPMENT NO</string>
    <string name="cusname">CUSTOMER NAME</string>
    <string name="search_edit">Search</string>
    <string name="repass">RESET PASSWORD</string>
    <string name="txt_name">Name</string>
    <string name="txt_contact">ContactNo</string>
    <string name="txt_email">Email</string>
    <string name="fill_field">Please fill the Fields *</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="prompt">Select A Reason</string>
    <string name="curpassword">Current Password</string>
    <string name="newpass">New Password</string>
    <string name="confpass">Conform Password</string>
    <string name="ord_title">Pending</string>
    <string name="ord_number">Order Number</string>
    <string name="ord_cus_number">Customer Number</string>
    <string name="ord_cus_name">Customer Name</string>
    <string name="ord_del_date">To Be Delivered</string>
    <string name="ord_ship_add">Shipping Address</string>
    <string name="ord_add">Address</string>
    <string name="ord_ship_city">Shipping City</string>
    <string name="ord_city">City</string>
    <string name="ord_ship_pincode">Shipping Pincode</string>
    <string name="ord_ship_invoice">Invoice Number</string>
    <string name="ord_ship_number">Shipment Number</string>
    <string name="ord_ship_invoic_amt">Amount</string>
    <string name="ord_ship_amt_coll">Amount Collected</string>
    <string name="ord_ship_paymode">Payment Mode</string>
    <string name="ord_ship_itemcode">Product Code</string>
    <string name="ord_ship_branchname">Client Branch Name</string>
    <string name="ord_ship_branchadd">Branch Address</string>
    <string name="ord_ship_branch_pin">Branch Pincode</string>
    <string name="ord_ship_att_count">Attempt Count</string>
    <string name="ord_delivery">DELIVERY</string>
    <string name="ord_par_delivery">PARTIAL DELIVERY</string>
    <string name="ord_un_delivery">UNDELIVERY</string>
    <string name="pername">Enter the Name</string>
    <string name="amount">Amount</string>
    <string name="valid_amount">Enter the Amount</string>
    <string name="valid_phone_number">Enter the valid phone number</string>
    <string name="error_phone">Enter  the Phone Number</string>
    <string name="error_ship_address">Enter Shipment Address</string>
    <string name="error_pincode">Enter the Pincode</string>
    <string name="valid_pincode">Enter the Valid Pincode</string>
    <string name="getwarning">Are you sure  want to fetch the details?</string>
    <string name="back_pressed">Are you sure  want to go back?</string>
    <string name="sign_here_title">Sign Here</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_clear">Clear</string>
    <string name="hint_save">Save</string>
    <string name="unDelReason">Enter the Remarks</string>
    <string name="country_prompt">Choose a country</string>
    <string name="landmark">LandMark</string>
    <string name="address"> Address</string>
    <string name="Redirect">Redirect</string>
    <string name="valid_add">Enter the Address</string>
    <string name="ok">OK</string>
    <string name="add_location_text">Apply</string>
    <string name="direction">Direction</string>
    <string name="get_location">Getting Location</string>
    <string name="gps_signal">Satellite signal is weak so, not getting the current location</string>
    <string name="valid_user_name">Enter the username</string>
    <string name="valid_pass">Enter the password</string>
    <string name="wrong_user">\"Wrong User !! Need to Check Online?</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="product_code">Product Code</string>
    <string name="product_name">Product Name</string>
    <string name="product_qty">Qty</string>
    <string name="product_amt">Amount</string>
    <string name="prat_title">Partial Delivery</string>
    <string name="par_ent_qty">Delivery Qty:</string>
    <string name="par_amt_colleted">Amount Collected:</string>
    <string name="par_total">Total</string>
    <string name="entervalid">Please Enter Valid Qty</string>
    <string name="adhaar">Aadhaar</string>
    <string name="undeliver_res">undelivered success</string>
    <string name="upload_failed">Already deliver has been upload successfully.so upload has been failed.</string>
    <string name="delivery_offline">Shipment has been stored offline</string>
    <string name="delivery_qty">Delivery Qty</string>
    <string-array name="reason_spinner">
        <item>Select Reason</item>
    </string-array>
    <string name="update_app"><u>update available</u>.</string>
    <string name="title_activity_main">Transport Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="enter_transport_id">Enter transport ID</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string name="missing_inputs">Please enter a transport ID, email and password</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="gps_required">Gps not enabled.</string>
    <string name="enable">Enable</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="confirm_stop">Do you really want to disable location tracking?</string>
    <string name="firebase_path" translatable="false">raw-locations/</string>
    <string name="prefs" translatable="false">prefs</string>
    <string name="transport_id" translatable="false">transport_id</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="tt_time_gmt">TrueTime: %1$s [GMT]</string>
    <string name="tt_time_pst">TrueTime: %1$s [PST]</string>
    <string name="tt_time_device">Device Time: %1$s [PST]</string>
    <string name="exactdate">Alert Date</string>
    <string name="get_date_warn">Your Mobile Date Time Is not accurate, Kindly adjust your clock and try again</string>
    <string name="accept">Accept</string>
    <string name="backupalert">Sorry you dont have access to take the backup now, Please contact the administrator</string>
    <string name="back_internet">Please switch on your internet connection</string>
    <string name="feed_back">FeedBack</string>
    <string name="opt">OTP</string>
    <string name="urn">URN</string>
    <string name="error_otp">Enter the OTP</string>
    <string name="error_urn">Enter the URN</string>
    <string name="force_update">Update Available</string>
    <string name="force_update_name">A Newer version of the Lastmile app is available to download</string>
    <string name="force_update_confirm">Update</string>
    <string name="force_update_ok">No,Thanks</string>
    <string name="back_up">Backup Completed</string>
    <string name="backup_suc">Backup Successful</string>
    <string name="zipfile">zipfile failed</string>
    <string name="backup_server">Backup saved but not sent to server</string>
    <string name="back_up_title">BACKUP</string>
    <string name="cash_colle">Please confirm Cash Collected?</string>
    <string name="device_not_supp">This device is not supported.</string>
    <string name="permission">Location permissions are required because we need to get the current latitude and longitude for  current location</string>
    <string name="warning">Warning!</string>
    <string name="camera_permission">Camera and storage permissions are required because we need to take the proof</string>
    <string name="info">Info</string>
    <string name="sure">Are you sure</string>
    <string name="change_language">Change Language</string>
</resources>