<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_white"
    android:padding="@dimen/pro_main_padding">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_oldPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="@dimen/re_edit_pass"
            android:padding="@dimen/re_padding"
            android:hint="@string/curpassword"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_newPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="@dimen/re_padding"
            android:textStyle="bold"
            android:textSize="@dimen/re_edit_pass"
            android:hint="@string/newpass"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_confirmPassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:singleLine="true"
            android:padding="@dimen/re_padding"
            android:textStyle="bold"
            android:textSize="@dimen/re_edit_pass"
            android:hint="@string/curpassword"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/per_infobutton"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pro_re_btn_hieght"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/bt_resetPass"
            android:layout_width="match_parent"
            android:background="@color/sucess"
            android:text="@string/repass"
            android:textStyle="bold"
            android:textSize="@dimen/pro_txt_size"
            android:textColor="@color/bg_white"
            android:layout_height="match_parent"/>
    </android.support.design.widget.NavigationView>


</RelativeLayout>