<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/alert_layout_corner"
              android:minWidth="@dimen/dialog_size"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_txt_size"
        android:padding="@dimen/pen_margin_left_name"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/deliver_size"/>
    <!--android:text="@string/fill_field"-->
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_reason"
        android:entries="@array/reason_spinner"
        />
    <!--android:prompt="@string/prompt"-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_undel_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginEnd="@dimen/pro_margin_left"
        android:layout_marginLeft="@dimen/pro_margin_left"
        android:layout_marginRight="@dimen/pro_margin_left"
        android:layout_marginStart="@dimen/pro_margin_left"
        android:visibility="gone"
        android:layout_marginTop="@dimen/pro_margin_left"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_undel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/map_layout"
        android:layout_height="@dimen/map_root_layout"
        android:clickable="true"
        android:visibility="gone"
        android:layout_marginTop="-5dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/input_fr_city"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/loc_address"
            android:layout_width="@dimen/map_btn_height"
            android:layout_height="@dimen/map_btn_weight"
            android:layout_marginTop="@dimen/map_marign_top"
            android:layout_marginLeft="@dimen/map_btn_left"
            android:textSize="@dimen/map_btn_size"
            android:layout_below="@+id/input_fr_city"
            android:layout_toLeftOf="@+id/map_layout"
            android:background="@color/colorPrimary"
            android:singleLine="true"
            android:textColor="@color/dark_white"
            android:padding="@dimen/map_btn_padding"
            android:text="@string/add_location_text"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/map_img1_margintop"
            android:contentDescription="@string/direction"
            android:background="@drawable/repeat"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="@dimen/map_txt_width"
            android:layout_height="@dimen/map_txt_height"
            android:layout_marginTop="@dimen/map_txt_martop"
            android:paddingLeft="@dimen/map_txt_padleft"
            android:paddingStart="@dimen/map_txt_padleft"
            android:layout_weight="3.4"
            android:layout_marginRight="@dimen/map_txt_marright"
            android:layout_marginEnd="@dimen/map_txt_marright"
            android:paddingRight="@dimen/map_txt_padright"
            android:paddingEnd="@dimen/map_txt_padright"
            android:text="@string/get_location"
            android:textSize="@dimen/map_btn_size"
            android:background="@drawable/text_border_color"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/map_img2_width"
            android:layout_height="@dimen/map_img2_height"
            android:layout_marginLeft="@dimen/map_img2_left"
            android:layout_marginStart="@dimen/map_img2_left"
            android:layout_marginRight="@dimen/map_img2_right"
            android:layout_marginEnd="@dimen/map_img2_right"
            android:layout_marginTop="@dimen/map_img2_top"
            android:contentDescription="@string/direction"
            android:background="@drawable/right_down_arrow"
            />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/google_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_map"
            android:scaleType="fitCenter"
            android:layout_marginTop="@dimen/map_img3_top"
            android:layout_marginRight="@dimen/map_img3_right"
            android:layout_marginEnd="@dimen/map_img3_right"
            />

    </LinearLayout>


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pro_margin_left"
        android:layout_marginEnd="@dimen/pro_margin_left"
        android:layout_marginLeft="@dimen/pro_margin_left"
        android:layout_marginRight="@dimen/pro_margin_left"
        android:layout_marginStart="@dimen/pro_margin_left"
        android:text="@string/Redirect"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/btn_txt_size"
        android:layout_marginTop="@dimen/btn_txt_size"
        android:weightSum="2"
        android:orientation="horizontal"
        android:padding="@dimen/pro_margin_left">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alert_margin"
            android:layout_marginStart="@dimen/alert_margin"
            android:layout_weight="1"
            android:singleLine="true"
            android:background="@drawable/btn_round_corner"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/back"
            android:textColor="@color/dark_white"
            android:textSize="@dimen/deliver_alert_size"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alert_margin"
            android:layout_marginRight="@dimen/alert_margin"
            android:layout_weight="1"
            android:textStyle="bold"
            android:singleLine="true"
            android:background="@drawable/btn_right_round_corner"
            android:padding="5dp"
            android:enabled="false"
            android:alpha="0.4"
            android:text="@string/submit"
            android:textColor="@color/dark_white"
            android:textSize="@dimen/deliver_alert_size"/>



    </LinearLayout>
</LinearLayout>
