<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/alert_layout_corner"
              android:minWidth="@dimen/dialog_size"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_txt_size"
        android:padding="@dimen/pen_margin_left_name"
        android:text=""
        android:textColor="@color/red"
        android:textSize="@dimen/deliver_size"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_reason"
        android:entries="@array/reason_spinner" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/txt_undel_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginEnd="@dimen/pro_margin_left"
        android:layout_marginLeft="@dimen/pro_margin_left"
        android:layout_marginRight="@dimen/pro_margin_left"
        android:layout_marginStart="@dimen/pro_margin_left"
        android:visibility="gone"
        android:layout_marginTop="@dimen/pro_margin_left"
        android:theme="@style/AppTheme">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/input_undel_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:imeOptions="actionDone"
            android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/sub_lay4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/linear_height"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imag_name"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_left"
            android:src="@drawable/photocamera" />
    </LinearLayout>

    </LinearLayout>


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/cb_pickup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pro_margin_left"
        android:layout_marginEnd="@dimen/pro_margin_left"
        android:layout_marginLeft="@dimen/pro_margin_left"
        android:layout_marginRight="@dimen/pro_margin_left"
        android:layout_marginStart="@dimen/pro_margin_left"
        android:text="Pickup Completed"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginBottom="@dimen/btn_txt_size"
        android:layout_marginTop="@dimen/btn_txt_size"
        android:weightSum="2"
        android:orientation="horizontal"
        android:padding="@dimen/pro_margin_left">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alert_margin"
            android:layout_marginStart="@dimen/alert_margin"
            android:layout_weight="1"
            android:singleLine="true"
            android:background="@drawable/btn_round_corner"
            android:padding="5dp"
            android:textStyle="bold"
            android:text="@string/back"
            android:textColor="@color/dark_white"
            android:textSize="@dimen/deliver_alert_size"/>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alert_margin"
            android:layout_marginRight="@dimen/alert_margin"
            android:layout_weight="1"
            android:textStyle="bold"
            android:singleLine="true"
            android:background="@drawable/btn_right_round_corner"
            android:padding="5dp"
            android:enabled="false"
            android:alpha="0.4"
            android:text="@string/submit"
            android:textColor="@color/dark_white"
            android:textSize="@dimen/deliver_alert_size"/>



    </LinearLayout>
</LinearLayout>
